--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDEe9EjuF21rOBnxAcsTi5ymhQX8jMcsyA"/>
+        android:value="YOUR_API_KEY"/>
     </application>
 </manifest>
